# aoc-2022

./: CMakeLists.txt  day1.go  input_day1_modified
src/: CMakeLists.txt  day1.cpp  day2.cpp  day3.cpp
